Fixed z-index bug with the menu

--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ h1, h2, h3, h4, h5, h6 {
 	width: 100%;
 	border-bottom: var(--area-border);
 	background: var(--area-background);
-	z-index: 1;
+	z-index: 3;
 }
 
 .toolbar {
